--- a/5_function_and_methods/7_lambdas_map_and_filter_expressions.ipynb
+++ b/5_function_and_methods/7_lambdas_map_and_filter_expressions.ipynb
@@ -203,7 +203,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# multiple arguments\n"
+   ]
   }
  ],
  "metadata": {
